Correct the contact info on small screens
fixes #4

--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -446,9 +446,6 @@ td.FAILED {
 }
 
 @media (max-width: 768px) {
-  .pull-right, .pull-left {
-      text-align: center;
-  } 
   .site-title {
       display: none;
   }
